--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,8 +3,8 @@
 $pri: #d3a166;
 $sec: #14583f;
 $dark: #222629;
-$light: #f0f6fa;
-$pink: #faecf7;
+$light: #f3f3f3;
+$pink: #eedded;
 
 //shadows
 
