--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,11 +16,8 @@
 
   &__left {
     flex: 2;
-    text-align: center;
+    text-align: left;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     flex-direction: column;
 
     h1 {
@@ -29,7 +26,7 @@
 
     h2 {
       color: $pri;
-      padding: 2rem;
+      padding: 1rem 0 2rem 0;
     }
   }
   &__right {
