--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -6,6 +6,7 @@
       position: absolute;
       color: white;
       width: 40rem;
+      text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
       display: flex;
       align-items: center;
       justify-content: center;
