--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -172,6 +172,7 @@
       justify-content: flex-end;
       gap: 1rem;
       align-items: center;
+      color: $pri;
 
       & img {
         width: 2rem;
@@ -192,6 +193,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   position: relative;
   width: 100vw;
   height: 5rem;
