--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -16,6 +16,11 @@
       padding: 1rem 10rem;
       flex-direction: column;
       gap: 2rem;
+
+      h1 {
+        padding-bottom: 2rem;
+        width: 75%;
+      }
     }
   }
 }
