--- a/styles/Featured.module.scss
+++ b/styles/Featured.module.scss
@@ -12,16 +12,17 @@
   &__cards {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 2rem;
-    height: 50rem;
     width: 100%;
+    align-items: center;
     margin-top: 5rem;
+    flex-wrap: wrap;
   }
 
   &__card {
     position: relative;
-    width: 25%;
+    width: 30rem;
     height: 50rem;
     background-color: white;
     box-shadow: $sha;
