--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 
-.header-contianer {
+.header-container {
   display: relative;
-  height: 16rem;
+  height: 17rem;
   background-color: white;
 
   @include respond(tab-land) {
@@ -12,12 +12,15 @@
 .header {
   position: fixed;
   width: 100%;
-  height: 12rem;
+  height: 8rem;
+  top: 4rem;
   z-index: 999;
   padding: 0 40rem;
+  border-bottom: 1px solid $dark;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  box-shadow: $sha;
+  // box-shadow: $sha;
   background: white;
   // border-bottom: 3px solid $light;
   transition: all 0.2s ease-in-out;
@@ -36,6 +39,7 @@
   }
 
   &__scrolled {
+    top: 0;
     // background-color: $pink;
     height: 7rem;
     // transition: all 0.2s ease-in-out;
@@ -116,7 +120,7 @@
         font-size: 1.8rem;
         top: 0;
         right: 0;
-        background-color: $dark;
+        background-color: $pink;
         height: -webkit-fill-available;
         min-height: 100vh;
         justify-content: center;
@@ -187,27 +191,33 @@
   }
 }
 
-.submenu {
-  background-color: $pink;
-  padding: 1rem 0;
+.topmenu {
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: $pink;
+  // border-bottom: 1px solid $dark;
+  height: 4rem;
+  text-align: center;
+  width: 100vw;
+  z-index: 99;
+  left: 0;
+}
+
+.submenu {
+  background-color: white;
+  padding: 1rem 0;
   text-align: center;
   position: relative;
   width: 100vw;
   height: 5rem;
   top: 12rem;
-  z-index: 9;
-  transition: all 0.2s ease-in-out;
 
   span {
     text-decoration: underline;
     font-weight: bold;
-  }
-
-  &__scrolled {
-    top: 7rem;
   }
 
   @include respond(tab-land) {
