--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,9 +10,13 @@
 .welcome {
   display: flex;
   gap: 3rem;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 3rem 0;
+
+  @include respond(tab-port) {
+    flex-direction: column;
+  }
 
   &__left {
     flex: 2;
@@ -22,11 +26,7 @@
 
     h1 {
       color: $sec;
-    }
-
-    h2 {
-      color: $pri;
-      padding: 1rem 0 2rem 0;
+      padding-bottom: 3rem;
     }
   }
   &__right {
@@ -36,7 +36,6 @@
     align-items: center;
     justify-content: center;
     flex: 1;
-    width: 100%;
     height: 30rem;
   }
 }
