--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .hero {
   &__slide {
     position: relative;
@@ -17,9 +19,18 @@
       flex-direction: column;
       gap: 2rem;
 
+      @include respond(tab-land) {
+        padding: 1rem 2rem;
+      }
+
       h1 {
         padding-bottom: 2rem;
         width: 75%;
+
+        @include respond(tab-land) {
+          width: 95%;
+          font-size: 3rem;
+        }
       }
     }
   }
