--- a/styles/HeadingTitle.module.scss
+++ b/styles/HeadingTitle.module.scss
@@ -10,7 +10,7 @@
   &::after {
     content: '';
     display: flex;
-    background: $sec;
+    background: $dark;
     width: 13rem;
     height: 0.1rem;
     justify-content: center;
