--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -16,13 +16,11 @@
   top: 4rem;
   z-index: 999;
   padding: 0 40rem;
-  // border-bottom: 0.5px solid $dark;
+  border-bottom: 0.1px solid $dark;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  // box-shadow: $sha;
   background: white;
-  // border-bottom: 3px solid $light;
   transition: all 0.2s ease-in-out;
 
   @include respond(desktop) {
