--- a/styles/Gallery.module.scss
+++ b/styles/Gallery.module.scss
@@ -15,7 +15,7 @@
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: 300px;
+    grid-auto-rows: 28rem;
     grid-auto-flow: dense;
     margin: 6rem 0;
   }
