--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -5,6 +5,7 @@
   background-color: white;
   min-height: calc(100% - 14rem);
   padding: 0 0 7rem 0;
+  z-index: 9999;
 
   &__top {
     display: flex;
