--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -14,7 +14,7 @@
   width: 100%;
   height: 10rem;
   top: 4rem;
-  z-index: 999;
+  z-index: 99999;
   padding: 0 40rem;
   border-bottom: 0.1px solid $dark;
   display: flex;
@@ -160,7 +160,7 @@
       }
     }
 
-    &--email {
+    &--socials {
       display: flex;
       flex: 1;
       justify-content: flex-end;
@@ -191,7 +191,7 @@
   height: 4rem;
   text-align: center;
   width: 100vw;
-  z-index: 99;
+  z-index: 99999;
   left: 0;
 
   &__link {
