--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -110,6 +110,9 @@ ul {
 
 .spinner {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
   height: 10rem;
   width: 10rem;
@@ -119,7 +122,11 @@ ul {
   -o-animation: rotation 0.5s infinite linear;
   animation: rotation 0.5s infinite linear;
   border-top: 0.6rem solid $pri;
-  border-left: 0.6rem solid $dark;
+  border-left: 0.6rem solid $pink;
+}
+
+.spinner img {
+  animation: none;
 }
 
 @keyframes rotation {
@@ -210,7 +217,6 @@ ul {
   width: 22rem;
   padding: 1.5rem 2rem;
   font-family: 'EB Garamond', serif;
-  border: 1px solid $dark;
   font-weight: 700;
   background: $dark;
   color: white;
@@ -218,10 +224,12 @@ ul {
   cursor: pointer;
   transition: all 0.3s ease;
   overflow: hidden;
+  outline: none;
+  border: none;
   position: relative;
 
   &:hover {
-    background-color: $pink !important;
+    background-color: $pri !important;
     color: $dark !important;
   }
 }
