--- a/styles/Events.module.scss
+++ b/styles/Events.module.scss
@@ -3,12 +3,22 @@
 .events {
   min-height: 100vh;
 
+  @include respond(tab-land) {
+    min-height: 100%;
+    margin-bottom: 5rem;
+  }
+
   h1 {
     margin: 6rem 0;
   }
 
   &__content {
     width: 90rem;
+
+    @include respond(tab-land) {
+      width: 100%;
+      text-align: center;
+    }
 
     p {
       padding: 1rem 0;
