--- a/styles/ContactPage.module.scss
+++ b/styles/ContactPage.module.scss
@@ -44,7 +44,7 @@
   }
   &__right {
     flex: 1;
-    background-color: $light;
+    background-color: $pink;
     padding: 3rem;
 
     &--content {
