--- a/styles/Events.module.scss
+++ b/styles/Events.module.scss
@@ -13,12 +13,8 @@
   }
 
   &__content {
-    width: 90rem;
-
-    @include respond(tab-land) {
-      width: 100%;
-      text-align: center;
-    }
+    display: flex;
+    gap: 1rem;
 
     p {
       padding: 1rem 0;
@@ -29,6 +25,19 @@
       color: $pri;
       font-weight: 600;
       margin-right: 1rem;
+    }
+
+    &--left {
+      flex: 2;
+    }
+
+    &--right {
+      flex: 1;
+      position: relative;
+
+      @include respond(tab-land) {
+        display: none;
+      }
     }
   }
 }
