customer slider added

--- a/styles/ContactUs.module.scss
+++ b/styles/ContactUs.module.scss
@@ -52,6 +52,8 @@
     input,
     textarea {
       border: 1px solid $pri;
+      -webkit-appearance: none;
+      border-radius: 0;
 
       &:focus-visible {
         outline: none;
