--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -10,10 +10,9 @@
   }
 }
 .header {
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 10rem;
-  top: 4rem;
   z-index: 99999;
   padding: 0 40rem;
   border-bottom: 0.1px solid $dark;
@@ -21,7 +20,6 @@
   flex-direction: column;
   justify-content: space-between;
   background: white;
-  transition: all 0.2s ease-in-out;
 
   @include respond(desktop) {
     padding: 0 10rem;
@@ -38,9 +36,9 @@
 
   &__scrolled {
     top: 0;
+    position: fixed;
     // background-color: $pink;
     height: 7rem;
-    // transition: all 0.2s ease-in-out;
     box-shadow: 0 1rem 2rem -1.5rem rgba(0, 0, 0, 0.35);
 
     @include respond(tab-land) {
@@ -68,7 +66,7 @@
       display: flex;
       height: auto;
       align-items: center;
-      transition: all 0.2s ease-in-out;
+      // transition: all 0.2s ease-in-out;
 
       @include respond(tab-land) {
         width: 15rem;
@@ -183,7 +181,7 @@
 }
 
 .topmenu {
-  position: fixed;
+  position: relative;
   top: 0;
   display: flex;
   align-items: center;
