--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -148,16 +148,16 @@ ul {
   display: flex;
   flex-direction: column;
   width: 60%;
-  background-color: #0f2231;
-  color: #f0b020;
+  background-color: $dark;
+  color: $light;
   align-items: center;
   justify-content: center;
   margin: 0 auto 3rem auto;
   text-align: center;
   position: absolute;
-  bottom: 4rem;
+  bottom: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 50%);
   box-shadow: var(--sha);
   border-radius: 1rem;
 
@@ -222,7 +222,7 @@ ul {
   color: white;
   font-size: 1.9rem;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: all 0.2s;
   overflow: hidden;
   outline: none;
   border: none;
@@ -230,7 +230,6 @@ ul {
 
   &:hover {
     background-color: $pri !important;
-    color: $dark !important;
   }
 }
 
