--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -36,6 +36,7 @@
       }
     }
   }
+
   &__right {
     position: relative;
     text-align: center;
@@ -47,6 +48,17 @@
 
     @include respond(tab-land) {
       display: none;
+    }
+
+    &--text {
+      position: absolute;
+      color: white;
+      z-index: 999;
+    }
+
+    h1 {
+      margin-bottom: 2rem;
+      text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
     }
   }
 }
