--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -225,7 +225,7 @@ ul {
   transition: all 0.2s;
   overflow: hidden;
   outline: none;
-  border: 1px solid $dark;
+  border: 1px solid $pri;
   position: relative;
 
   &:hover {
