--- a/styles/HeadingTitle.module.scss
+++ b/styles/HeadingTitle.module.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   column-gap: 2rem;
   text-align: center;
+  font-size: 3rem;
+  margin-bottom: 3rem;
 
   &::before,
   &::after {
