--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -23,9 +23,10 @@
         padding: 1rem 2rem;
       }
 
-      h1 {
+      h2 {
         padding-bottom: 2rem;
         width: 75%;
+        font-size: 5rem;
 
         @include respond(tab-land) {
           width: 95%;
