--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -62,9 +62,10 @@
       z-index: 999;
     }
 
-    h1 {
+    h2 {
       margin-bottom: 2rem;
       text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
+      font-size: 3rem;
     }
   }
 }
