--- a/styles/ContactPage.module.scss
+++ b/styles/ContactPage.module.scss
@@ -66,8 +66,9 @@
       align-items: center;
       justify-content: center;
 
-      h1 {
+      h2 {
         padding-bottom: 3rem;
+        font-size: 3rem;
       }
     }
   }
