--- a/styles/Events.module.scss
+++ b/styles/Events.module.scss
@@ -8,6 +8,13 @@
     margin-bottom: 5rem;
   }
 
+  &__title {
+    margin-top: 5rem;
+    @include respond(tab-land) {
+      margin-top: 10rem;
+    }
+  }
+
   &__content {
     display: flex;
     gap: 3rem;
