--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -218,14 +218,14 @@ ul {
   padding: 1.5rem 2rem;
   font-family: 'EB Garamond', serif;
   font-weight: 700;
-  background: $pink;
+  background: white;
   color: $dark;
   font-size: 1.9rem;
   cursor: pointer;
   transition: all 0.2s;
   overflow: hidden;
   outline: none;
-  border: 1px solid $pri;
+  border: 1px solid $dark;
   position: relative;
 
   &:hover {
