--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -15,7 +15,7 @@
   height: 10rem;
   z-index: 99999;
   padding: 0 40rem;
-  border-bottom: 0.1px solid $dark;
+  border-bottom: 0.1px solid $pri;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
