--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -7,7 +7,6 @@
     &--text {
       position: absolute;
       color: white;
-      width: 40rem;
       text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
       display: flex;
       align-items: center;
@@ -16,21 +15,18 @@
       height: 100%;
       text-align: center;
       padding: 1rem 10rem;
-      flex-direction: column;
       gap: 2rem;
 
       @include respond(tab-land) {
-        padding: 1rem 2rem;
+        padding: 1rem 2rem !important;
       }
 
       h2 {
-        padding-bottom: 2rem;
-        width: 75%;
         font-size: 5rem;
 
         @include respond(tab-land) {
           width: 95%;
-          font-size: 3rem;
+          font-size: 4.5rem !important;
         }
       }
     }
