--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -15,16 +15,16 @@
 
     &--left {
       content: '';
-      height: 1px;
+      height: 1.5px;
       width: 100%;
-      background: $dark;
+      background: $pri;
     }
 
     &--right {
       content: '';
-      height: 1px;
+      height: 1.5px;
       width: 100%;
-      background: $dark;
+      background: $pri;
     }
   }
 
